maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: warning: enclosing method isDirectionFree has result type Unit: return value discarded
  return ! estFaceMur()
  ^Escaper:6: error: not found: value directioncourante
  setDirection(directioncourante)
               ^